monitoring/configs/kube-prometheus-stack/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-grafana-ingress
  namespace: kube-prometheus-stack
  annotations:
    external-dns.kubernetes.io/hostname: grafana.local.mariosl.dev
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cert-manager-cluster-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.local.mariosl.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-helmrelease-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.local.mariosl.dev
      secretName: grafana-local-mariosl-dev-tls
